tweaked index.html text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<div class="blue">LONDON</div>
 				<a href="http://hackmakethebank3.eventbrite.com"><div class="pink">SIGN UP</div></a>
 			</div>
-			<p>Organized by Level39 and TESOBE for The Open Bank Project</p>
+			<p>Organized by TESOBE and Level39 for The Open Bank Project</p>
 			<div id="logos">
 				<img src="img/logo-tesobe.png">
 				<img src="img/logo-l39.png">
