Text changes, add links for buttons

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 			<img id="htb" src="img/logo.png">
 			<h1>FinTech Hackathon <br>to reinvent the Bank.</h1>
 			<div id="btns">
-				<div class="blue">21 March 2014</div>
-				<div class="blue">LONDON</div>
+				<a href="http://hackmakethebank3.eventbrite.com"><div class="blue">21 March 2014</div></a>
+				<a href="http://hackmakethebank3.eventbrite.com"><div class="blue">LONDON</div></a>
 				<a href="http://hackmakethebank3.eventbrite.com"><div class="pink">SIGN UP</div></a>
 			</div>
-			<p>Organized by Level39 and TESOBE for The Open Bank Project</p>
+			<p>Organised by TESOBE / The Open Bank Project and Level39</p>
 			<div id="logos">
 				<img src="img/logo-tesobe.png">
-				<img src="img/logo-l39.png">
 				<img src="img/logo-obp.png">
+				<img src="img/logo-l39.png">
 			</div>
 		</div>
 	</body>
