Change design to bright

--- a/index.html
+++ b/index.html
@@ -9,18 +9,24 @@
 	</head>
 	<body>
 		<div id="wrapper">
-			<img id="htb" src="img/logo.png">
-			<h1>FinTech Hackathon <br>to reinvent the Bank.</h1>
+			<img id="htb" src="img/logo-dark.png">
+			<h1>FinTech API hackathon <br>to reinvent the Bank.</h1>
 			<div id="btns">
-				<a href="http://hackmakethebank3.eventbrite.com"><div class="blue">21 March 2014</div></a>
-				<a href="http://hackmakethebank3.eventbrite.com"><div class="blue">LONDON</div></a>
+				<a href="suppl/invite.ics"><div class="blue">21 March 2014</div></a>
+				<a href="https://maps.google.de/maps?q=Level39,+One+Canada+Square,+Canary+Wharf+E14+5AB&oe=utf-8&client=firefox-a&channel=fflb&ie=UTF-8&ei=9RIPU8zgL-T8ygPAyIGwBQ&ved=0CAkQ_AUoAQ"><div class="blue">LONDON</div></a>
 				<a href="http://hackmakethebank3.eventbrite.com"><div class="pink">SIGN UP</div></a>
 			</div>
-			<p>Organised by TESOBE / The Open Bank Project and Level39</p>
+
+			<div class="about">
+				<p>
+					Located in a great place for sky high ideas, coding and views, the 3rd edition of Hack/Make The Bank Hackathon will host programmers, designers and the financial services industry experts for a day of brainstorming and software creation. Attendees will leverage and combine a number of financial APIs in order to bring their innovative ideas to life!
+				</p>
+			</div>
+			<p class="org">Organised by TESOBE / The Open Bank Project and Level39</p>
 			<div id="logos">
-				<img src="img/logo-tesobe.png">
-				<img src="img/logo-obp.png">
-				<img src="img/logo-l39.png">
+				<a href="http://tesobe.com"><img src="img/logo-tesobe-dark.png"></a>
+				<a href="http://openbankproject.com"><img src="img/logo-obp-bw.png"></a>
+				<a href="http://level39.co"><img src="img/logo-l39-dark.png"></a>
 			</div>
 		</div>
 	</body>
