Finish bright design

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 			</div>
 			<p class="org">Organised by TESOBE / The Open Bank Project and Level39</p>
 			<div id="logos">
-				<a href="http://tesobe.com"><img src="img/logo-tesobe-dark.png"></a>
-				<a href="http://openbankproject.com"><img src="img/logo-obp-bw.png"></a>
-				<a href="http://level39.co"><img src="img/logo-l39-dark.png"></a>
+				<a href="http://tesobe.com"><img id="tesobe" src="img/logo-tesobe.png"></a>
+				<a href="http://openbankproject.com"><img id="obp" src="img/logo-obp-bw.png"></a>
+				<a href="http://level39.co"><img id="l39" src="img/logo-l39-dark.png"></a>
 			</div>
 		</div>
 	</body>
