--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<h1>FinTech API hackathon <br>to reinvent the Bank.</h1>
 			<div id="btns">
 				<a href="suppl/invite.ics"><div class="blue">21 March 2014</div></a>
-				<a href="https://maps.google.de/maps?q=Level39,+One+Canada+Square,+Canary+Wharf+E14+5AB&oe=utf-8&client=firefox-a&channel=fflb&ie=UTF-8&ei=9RIPU8zgL-T8ygPAyIGwBQ&ved=0CAkQ_AUoAQ"><div class="blue">LONDON</div></a>
+				<a href="https://maps.google.de/maps?q=Level39,+One+Canada+Square,+Canary+Wharf+E14+5AB&oe=utf-8&client=firefox-a&channel=fflb&ie=UTF-8&ei=9RIPU8zgL-T8ygPAyIGwBQ&ved=0CAkQ_AUoAQ" target="_blank"><div class="blue">LONDON</div></a>
 				<a href="http://hackmakethebank3.eventbrite.com"><div class="pink">SIGN UP</div></a>
 			</div>
 
@@ -24,9 +24,9 @@
 			</div>
 			<p class="org">Organised by TESOBE / The Open Bank Project and Level39</p>
 			<div id="logos">
-				<a href="http://tesobe.com"><img id="tesobe" src="img/logo-tesobe.png"></a>
-				<a href="http://openbankproject.com"><img id="obp" src="img/logo-obp-bw.png"></a>
-				<a href="http://level39.co"><img id="l39" src="img/logo-l39-dark.png"></a>
+				<a href="http://tesobe.com" target="_blank"><img id="tesobe" src="img/logo-tesobe-dark.png"></a>
+				<a href="http://openbankproject.com" target="_blank"><img id="obp" src="img/logo-obp-bw.png"></a>
+				<a href="http://level39.co" target="_blank"><img id="l39" src="img/logo-l39-dark.png"></a>
 			</div>
 		</div>
 	</body>
