--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 			<div class="about">
 				<p>
-					Located in a great place for sky high ideas, coding and views, the 3rd edition of Hack/Make The Bank Hackathon will host programmers, designers and the financial services industry experts for a day of brainstorming and software creation. Attendees will leverage and combine a number of financial APIs in order to bring their innovative ideas to life!
+					Located in a great place for sky high ideas, coding and views, the 3rd edition of Hack/Make The Bank Hackathon will host programmers, designers and financial services industry experts for a day of brainstorming, software creation and fun! Attendees will leverage and combine a number of financial and related APIs in order to bring their innovative ideas to life!
 				</p>
 			</div>
 			<p class="org">Organised by TESOBE / The Open Bank Project and Level39</p>
