--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<div id="wrapper">
 			<img id="htb" src="img/logo-dark.png">
-			<h1>FinTech API hackathon <br>to reinvent the Bank.</h1>
+			<h1>FinTech API hackathon <br>to reinvent the bank.</h1>
 			<div id="btns">
 				<a href="suppl/invite.ics"><div class="blue">21 March 2014</div></a>
 				<a href="https://maps.google.de/maps?q=Level39,+One+Canada+Square,+Canary+Wharf+E14+5AB&oe=utf-8&client=firefox-a&channel=fflb&ie=UTF-8&ei=9RIPU8zgL-T8ygPAyIGwBQ&ved=0CAkQ_AUoAQ" target="_blank"><div class="blue">LONDON</div></a>
