Add partner logos

--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
 		    	<a href="http://level39.co" target="_blank"><img id="l39" src="img/logo-l39-dark.png"></a>
 		    </div>
 			</div>
+			<div class="about grid-100">
+				<p>With the support of our partners:</p>
+			</div>
+			<div id="partner">
+				<div class="grid-33">
+		    	<a href="http://www.temenos.com/en/" target="_blank"><img id="temenos" src="img/temenos-bw.png"></a>
+		    </div>
+		    <div class="grid-33">
+		    	<a href=" http://pixelpin.co.uk/" target="_blank"><img id="pixelpin" src="img/pixelpin-bw.png"></a>
+		    </div>
+		    <div class="grid-33">
+		  		<a href="https://developer.paypal.com/" target="_blank"><img id="paypal" src="img/paypal-bw.png"></a>
+		    </div>
+			</div>
 	  </div>
 	</body>
 </html>
