Added partner logos and rescaled them

--- a/index.html
+++ b/index.html
@@ -48,18 +48,27 @@
 		    	<a href="http://level39.co" target="_blank"><img id="l39" src="img/logo-l39-dark.png"></a>
 		    </div>
 			</div>
-			<div class="about grid-100">
-				<p>With the support of our partners:</p>
+			<div class="apis grid-100">
+				<p>Come and hack with the following APIs:</p>
 			</div>
 			<div id="partner">
-				<div class="grid-33">
+				<div class="grid-15">
 		    	<a href="http://www.temenos.com/en/" target="_blank"><img id="temenos" src="img/temenos-bw.png"></a>
 		    </div>
-		    <div class="grid-33">
+		    <div class="grid-15">
 		    	<a href=" http://pixelpin.co.uk/" target="_blank"><img id="pixelpin" src="img/pixelpin-bw.png"></a>
 		    </div>
-		    <div class="grid-33">
+		    <div class="grid-15">
 		  		<a href="https://developer.paypal.com/" target="_blank"><img id="paypal" src="img/paypal-bw.png"></a>
+		    </div>
+		    <div class="grid-15">
+		    	<a href="http://openbankproject.com" target="_blank"><img id="obp-api" src="img/logo-obp-bw.png"></a>
+		    </div>
+		    <div class="grid-15">
+		  		<a href="http://www.op3nvoice.com/#" target="_blank"><img id="op3nvoice" src="img/op3nvoice-bw.png"></a>
+		    </div>
+		    <div class="grid-15">
+		    	<a href="http://www.growthintel.com/" target="_blank"><img id="gi" src="img/gi-bw.png"></a>
 		    </div>
 			</div>
 	  </div>
