Changing to Berlin July 14 (edition 4)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1" charset="utf-8">
-		<title>Hack the Bank 2014</title>
+		<title>Hack / Make The Bank</title>
 		<link rel="stylesheet" type="text/css" media="screen" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" media="screen" href="css/index.css">
 		<link rel="stylesheet" type="text/css" media="screen" href="css/unsemantic.css">
@@ -11,25 +11,44 @@
 		<div id="wrapper" class="grid-container">
 	    <div class="grid-100">
 	     	<img id="htb" class="grid-100" src="img/logo-dark.png">
-	     	<h1>FinTech API hackathon <br>to reinvent the bank.</h1>
+	     	<h1>FinTech API hackathons <br>to reinvent the bank.</h1>
 	    </div>
 	    <div id="btns">
 	    	<div class="grid-33">
-	    		<a href="suppl/invite.ics"><div class="blue">21 March 2014</div></a>
+	    		<a href="suppl/invite.ics"><div class="blue">14 July 2014</div></a>
 	    	</div>
 	    	<div class="grid-33">
-	    		<a href="https://maps.google.de/maps?q=Level39,+One+Canada+Square,+Canary+Wharf+E14+5AB&oe=utf-8&client=firefox-a&channel=fflb&ie=UTF-8&ei=9RIPU8zgL-T8ygPAyIGwBQ&ved=0CAkQ_AUoAQ" target="_blank"><div class="blue">LONDON</div></a>
+	    		<a href="https://www.google.com/maps/place/Osloer+Straße+17/@52.55631,13.3837,17z" target="_blank"><div class="blue">Berlin</div></a>
 	    	</div>
 	    	<div class="grid-33">
-	    		<a href="http://hackmakethebank3.eventbrite.com"><div class="pink">SIGN UP</div></a>
+	    		<a href="http://hackmakethebank4.eventbrite.com"><div class="pink">SIGN UP</div></a>
 	    	</div>
 	    </div>
 		
 			<div class="about grid-100">
-			 	<p>
-					Located in a great place for sky high ideas, coding and views, the 3rd edition of Hack/Make The Bank Hackathon will host programmers, designers and financial services industry experts for a day of brainstorming, software creation and fun! Attendees will leverage and combine a number of financial and related APIs in order to bring their innovative ideas to life!
+			 	<p>	
+Europe's notorious FinTech Hackathon series "Hack/Make The Bank" comes
+to Berlin this summer!
+
+The 4th edition is an OK Festival fringe event and will have an
+open data flavour.
+
+Developers, designers and members of the financial services industry
+will gather for a day of brainstorming and software creation in the
+fields of retail banking, capital markets, payments...etc
+
+Attendees will have a host of application programming interfaces (APIs)
+and open data sets they can leverage and combine in order to bring their
+innovative ideas to life. They can participate alone or join a team.
+Participants will demo their hacks at the end of the day to a panel of
+bank executives, FinTech entrepreneurs and the general public.
 				</p> 
-				<p class="org">Organised by TESOBE / The Open Bank Project and Level39</p>	
+<p>	
+Note: Please check back nearer the time, since the venue might change!
+</p> 
+
+
+				<p class="org">Organised by TESOBE / The Open Bank Project</p>	
 		  </div>
 		  <div id="logos">
 		  	<div class="grid-33">
@@ -38,9 +57,7 @@
 		    <div class="grid-33">
 		    	<a href="http://openbankproject.com" target="_blank"><img id="obp" src="img/logo-obp-bw.png"></a>
 		    </div>
-		    <div class="grid-33">
-		    	<a href="http://level39.co" target="_blank"><img id="l39" src="img/logo-l39-dark.png"></a>
-		    </div>
+	
 			</div>
 			<div class="apis grid-100">
 				<p>Come and hack with the following APIs:</p>
@@ -50,6 +67,10 @@
 					<div class="grid-50">
 			    	<a href="http://openbankproject.com" target="_blank"><img id="obp-api" src="img/logo-obp-bw.png"></a>
 			    </div>
+
+
+<!--
+
 			    <div class="grid-50">
 			    	<a href=" http://pixelpin.co.uk/" target="_blank"><img id="pixelpin" src="img/pixelpin-bw.png"></a>
 			    </div>
@@ -69,6 +90,9 @@
 			    <div class="grid-50">
 			    	<a href="http://www.growthintel.com/" target="_blank"><img id="gi" src="img/gi-bw.png"></a>
 			    </div>
+
+-->
+
 		    </div>
 			</div>
 	  </div>
