--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<body>
 		<div id="wrapper" class="grid-container">
 	    <div class="grid-100">
-	     	<img id="htb" class="grid-100" src="img/logo-dark.png">
-	     	<h1>FinTech API hackathons <br>to reinvent the bank.</h1>
+	     	<img id="htb" class="grid-100" src="img/banner-hmtb4.png">
+	     	<h1>FinTech API hackathons <br>to reinvent banks!</h1>
 	    </div>
 	    <div id="btns">
 	    	<div class="grid-33">
