Tweaking text. No partners yet

--- a/index.html
+++ b/index.html
@@ -27,29 +27,26 @@
 		
 			<div class="about grid-100">
 			 	<p>	
-Europe's notorious FinTech Hackathon series "Hack/Make The Bank" comes
-to Berlin this summer!
-
-The 4th edition is an OK Festival fringe event and will have an
-open data flavour.
-
-Developers, designers and members of the financial services industry
-will gather for a day of brainstorming and software creation in the
-fields of retail banking, capital markets, payments...etc
-
-Attendees will have a host of application programming interfaces (APIs)
-and open data sets they can leverage and combine in order to bring their
-innovative ideas to life. They can participate alone or join a team.
-Participants will demo their hacks at the end of the day to a panel of
-bank executives, FinTech entrepreneurs and the general public.
+					Europe's notorious FinTech Hackathon series "Hack/Make The Bank" comes to Berlin this summer!
 				</p> 
-<p>	
-Note: Please check back nearer the time, since the venue might change!
-</p> 
+
+				<p>	
+					The 4th edition is an OK Festival fringe event and will have an open data flavour.
+				</p> 
+
+				<p> 
+					Developers, designers and members of the financial services industry will gather for a day of brainstorming and software creation in the fields of retail banking, capital markets, payments...etc
+				</p>
+		
+				<p>	
+					Note: Please check back nearer the time, since the venue might change!
+				</p> 
 
 
 				<p class="org">Organised by TESOBE / The Open Bank Project</p>	
 		  </div>
+
+
 		  <div id="logos">
 		  	<div class="grid-33">
 		  		<a href="http://tesobe.com" target="_blank"><img id="tesobe" src="img/logo-tesobe-dark.png"></a>
@@ -59,17 +56,60 @@ Note: Please check back nearer the time, since the venue might change!
 		    </div>
 	
 			</div>
+
+
+<!--
+
 			<div class="apis grid-100">
 				<p>Come and hack with the following APIs:</p>
 			</div>
 			<div id="partner">
-				<div class="grid-33">
-					<div class="grid-50">
-			    	<a href="http://openbankproject.com" target="_blank"><img id="obp-api" src="img/logo-obp-bw.png"></a>
-			    </div>
+-->
+				<!--
+<ul>
+
+	<li><a href="http://openbankproject.com" target="_blank">Open Bank Project</a></li>
+
+</ul>
+-->
 
 
 <!--
+
+		
+					<div class="grid-50">
+			    		<a href="http://openbankproject.com" target="_blank"><img src="img/logo-obp-bw.png"></a>
+			    	</div>
+
+
+					<div class="grid-50">
+			    		<a href="https://api.opencorporates.com/" target="_blank"><img src="img/opencorpslogo.png"></a>
+			    	</div>
+
+					<div class="grid-50">
+			    		<a href="http://data.worldbank.org/developers" target="_blank"><img src="img/world_bank_WBFinancesLogo.png"></a>
+			    	</div>
+
+
+-->
+
+
+
+
+
+
+
+
+<!--
+
+The available APIs are:
+
+   - The Open Bank Project   <http://openbankproject.com/en/developers/>
+   - OpenCorporates <https://api.opencorporates.com/>
+   - Enigma.io <http://enigma.io/solutions/api/>
+   - Spend Network  <http://spendnetwork.posthaven.com/spend-network-api>
+   - World Bank Open Finance <http://data.worldbank.org/developers>
+
 
 			    <div class="grid-50">
 			    	<a href=" http://pixelpin.co.uk/" target="_blank"><img id="pixelpin" src="img/pixelpin-bw.png"></a>
@@ -84,6 +124,9 @@ Note: Please check back nearer the time, since the venue might change!
 			    </div>
 				</div>
 				<div class="grid-33">
+
+
+
 			    <div class="grid-50">
 			  		<a href="http://www.op3nvoice.com/#" target="_blank"><img id="op3nvoice" src="img/op3nvoice-bw.png"></a>
 			    </div>
