Adding APIs (needs styling)

--- a/index.html
+++ b/index.html
@@ -8,136 +8,61 @@
 		<link rel="stylesheet" type="text/css" media="screen" href="css/unsemantic.css">
 	</head>
 	<body>
+
+
 		<div id="wrapper" class="grid-container">
-	    <div class="grid-100">
-	     	<img id="htb" class="grid-100" src="img/banner-hmtb4.png">
-	     	<h1>FinTech API hackathons <br>to reinvent banks!</h1>
-	    </div>
-	    <div id="btns">
-	    	<div class="grid-33">
-	    		<a href="suppl/invite.ics"><div class="blue">14 July 2014</div></a>
-	    	</div>
-	    	<div class="grid-33">
-	    		<a href="https://www.google.com/maps/place/Osloer+Straße+17/@52.55631,13.3837,17z" target="_blank"><div class="blue">Berlin</div></a>
-	    	</div>
-	    	<div class="grid-33">
-	    		<a href="http://hackmakethebank4.eventbrite.com"><div class="pink">SIGN UP</div></a>
-	    	</div>
-	    </div>
-		
-			<div class="about grid-100">
-			 	<p>	
-					Europe's notorious FinTech Hackathon series "Hack/Make The Bank" comes to Berlin this summer!
-				</p> 
+            <div class="grid-100">
+                <img id="htb" class="grid-100" src="img/banner-hmtb4.png">
+                <h1>FinTech API hackathons!</h1>
+            </div>
+            <div id="btns">
+                <div class="grid-33">
+                    <a href="suppl/invite.ics"><div class="blue">14 July 2014</div></a>
+                </div>
+                <div class="grid-33">
+                    <a href="https://www.google.com/maps/place/Osloer+Straße+17/@52.55631,13.3837,17z" target="_blank"><div class="blue">Berlin</div></a>
+                </div>
+                <div class="grid-33">
+                    <a href="http://hackmakethebank4.eventbrite.com"><div class="pink">SIGN UP</div></a>
+                </div>
+            </div>
 
-				<p>	
-					The 4th edition is an OK Festival fringe event and will have an open data flavour.
-				</p> 
+            <div class="about grid-100">
+                <p>"Hack/Make The Bank" comes to Berlin this summer!</p>
 
-				<p> 
-					Developers, designers and members of the financial services industry will gather for a day of brainstorming and software creation in the fields of retail banking, capital markets, payments...etc
-				</p>
-		
-				<p>	
-					Note: Please check back nearer the time, since the venue might change!
-				</p> 
+                <p>The 4th edition is an OK Festival fringe event with an open data flavour.</p>
+
+                <p>Developers, designers and members of the financial services industry will gather for a day of brainstorming and software creation in the fields of retail banking, capital markets, payments etc.</p>
+
+                <p>Please note: Venue is subject to change.</p>
 
 
-				<p class="org">Organised by TESOBE / The Open Bank Project</p>	
-		  </div>
+                <p class="org">Organised by TESOBE / The Open Bank Project</p>
+            </div>
 
 
-		  <div id="logos">
-		  	<div class="grid-33">
-		  		<a href="http://tesobe.com" target="_blank"><img id="tesobe" src="img/logo-tesobe-dark.png"></a>
-		    </div>
-		    <div class="grid-33">
-		    	<a href="http://openbankproject.com" target="_blank"><img id="obp" src="img/logo-obp-bw.png"></a>
-		    </div>
-	
-			</div>
+             <div id="logos">
+                <div class="grid-33">
+                    <a href="http://tesobe.com" target="_blank"><img id="tesobe" src="img/logo-tesobe-dark.png"></a>
+                </div>
+                <div class="grid-33">
+                    <a href="http://openbankproject.com" target="_blank"><img id="obp" src="img/logo-obp-bw.png"></a>
+                </div>
+                <div class="grid-33">
+                </div>
+            </div>
 
+            <div class="apis grid-100">
+                <p>Come and hack with the following APIs:</p>
+                <ul>
+                    <li><a href="http://www.openbankproject.com/developers">Open Bank Project</a></li>
+                    <li><a href="https://api.opencorporates.com/">Open Corporates</a></li>
+                    <li><a href="http://data.worldbank.org/developers">World Bank</a></li>
+                    <li><a href="http://enigma.io/solutions/api/">Enigma.io</a></li>
+                    <li><a href="http://spendnetwork.posthaven.com/spend-network-api">Spend Network</a></li>
+                </ul>
+            </div>
 
-<!--
-
-			<div class="apis grid-100">
-				<p>Come and hack with the following APIs:</p>
-			</div>
-			<div id="partner">
--->
-				<!--
-<ul>
-
-	<li><a href="http://openbankproject.com" target="_blank">Open Bank Project</a></li>
-
-</ul>
--->
-
-
-<!--
-
-		
-					<div class="grid-50">
-			    		<a href="http://openbankproject.com" target="_blank"><img src="img/logo-obp-bw.png"></a>
-			    	</div>
-
-
-					<div class="grid-50">
-			    		<a href="https://api.opencorporates.com/" target="_blank"><img src="img/opencorpslogo.png"></a>
-			    	</div>
-
-					<div class="grid-50">
-			    		<a href="http://data.worldbank.org/developers" target="_blank"><img src="img/world_bank_WBFinancesLogo.png"></a>
-			    	</div>
-
-
--->
-
-
-
-
-
-
-
-
-<!--
-
-The available APIs are:
-
-   - The Open Bank Project   <http://openbankproject.com/en/developers/>
-   - OpenCorporates <https://api.opencorporates.com/>
-   - Enigma.io <http://enigma.io/solutions/api/>
-   - Spend Network  <http://spendnetwork.posthaven.com/spend-network-api>
-   - World Bank Open Finance <http://data.worldbank.org/developers>
-
-
-			    <div class="grid-50">
-			    	<a href=" http://pixelpin.co.uk/" target="_blank"><img id="pixelpin" src="img/pixelpin-bw.png"></a>
-			    </div>
-				</div>
-				<div class="grid-33">
-					<div class="grid-50">
-			  		<a href="https://developer.paypal.com/" target="_blank"><img id="paypal" src="img/paypal-bw.png"></a>
-			    </div>
-					<div class="grid-50">
-			    	<a href="http://www.temenos.com/en/" target="_blank"><img id="temenos" src="img/temenos-bw.png"></a>
-			    </div>
-				</div>
-				<div class="grid-33">
-
-
-
-			    <div class="grid-50">
-			  		<a href="http://www.op3nvoice.com/#" target="_blank"><img id="op3nvoice" src="img/op3nvoice-bw.png"></a>
-			    </div>
-			    <div class="grid-50">
-			    	<a href="http://www.growthintel.com/" target="_blank"><img id="gi" src="img/gi-bw.png"></a>
-			    </div>
-
--->
-
-		    </div>
-			</div>
-	  </div>
+        </div>
 	</body>
 </html>
