--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div id="wrapper" class="grid-container">
             <div class="grid-100">
                 <img id="htb" class="grid-100" src="img/banner-hmtb4.png">
-                <h1>FinTech API hackathons!</h1>
+                <h1>FinTech API hackathons for re-animating banking!</h1>
             </div>
             <div id="btns">
                 <div class="grid-33">
@@ -30,12 +30,18 @@
             <div class="about grid-100">
                 <p>"Hack/Make The Bank" comes to Berlin this summer!</p>
 
-                <p>The 4th edition is an OK Festival fringe event with an open data flavour.</p>
+                <p>The 4th edition is an OK Festival fringe event with an Open Data flavour.</p>
 
                 <p>Developers, designers and members of the financial services industry will gather for a day of brainstorming and software creation in the fields of retail banking, capital markets, payments etc.</p>
 
-                <p>Please note: Venue is subject to change.</p>
-
+                <p>Come and hack on the following APIs:</p>
+                <ul>
+                    <li><a href="http://www.openbankproject.com/developers">Open Bank Project</a></li>
+                    <li><a href="https://api.opencorporates.com/">Open Corporates</a></li>
+                    <li><a href="http://data.worldbank.org/developers">World Bank</a></li>
+                    <li><a href="http://enigma.io/solutions/api/">Enigma.io</a></li>
+                    <li><a href="http://spendnetwork.posthaven.com/spend-network-api">Spend Network</a></li>
+                </ul>
 
                 <p class="org">Organised by TESOBE / The Open Bank Project</p>
             </div>
@@ -50,17 +56,6 @@
                 </div>
                 <div class="grid-33">
                 </div>
-            </div>
-
-            <div class="apis grid-100">
-                <p>Come and hack with the following APIs:</p>
-                <ul>
-                    <li><a href="http://www.openbankproject.com/developers">Open Bank Project</a></li>
-                    <li><a href="https://api.opencorporates.com/">Open Corporates</a></li>
-                    <li><a href="http://data.worldbank.org/developers">World Bank</a></li>
-                    <li><a href="http://enigma.io/solutions/api/">Enigma.io</a></li>
-                    <li><a href="http://spendnetwork.posthaven.com/spend-network-api">Spend Network</a></li>
-                </ul>
             </div>
 
         </div>
