--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="suppl/invite.ics"><div class="blue">13 July 2014</div></a>
                 </div>
                 <div class="grid-33">
-                    <a href="https://www.google.com/maps/place/Osloer+Straße+17/@52.55631,13.3837,17z" target="_blank"><div class="blue">Berlin</div></a>
+                    <a href="https://www.google.com/maps/place/co.up/@52.500444,13.41951,17z/data=!3m1!4b1!4m2!3m1!1s0x47a84e337e23d413:0x2cfd69e5a9f68f1a" target="_blank"><div class="blue">Berlin</div></a>
                 </div>
                 <div class="grid-33">
                     <a href="http://hackmakethebank4.eventbrite.com"><div class="pink">SIGN UP</div></a>
