--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <li><a href="http://spendnetwork.posthaven.com/spend-network-api">Spend Network</a></li>
                 </ul>
 
-                <p class="org">Organised by TESOBE / The Open Bank Project</p>
+                <p class="org">Organised by TESOBE / The Open Bank Project, Funded by the Shuttleworth Foundation</p>
             </div>
 
 
@@ -55,6 +55,7 @@
                     <a href="http://openbankproject.com" target="_blank"><img id="obp" src="img/logo-obp-bw.png"></a>
                 </div>
                 <div class="grid-33">
+                    <a href="https://www.shuttleworthfoundation.org/" target="_blank"><img id="obp" src="img/shuttleworth_funded_bw_trans_grey.png"></a>
                 </div>
             </div>
 
