tweaked the sponsor text

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <li><a href="http://spendnetwork.posthaven.com/spend-network-api">Spend Network</a></li>
                 </ul>
 
-                <p class="org">Organised by TESOBE / The Open Bank Project, Funded by the Shuttleworth Foundation</p>
+                <p class="org">Organised and funded by TESOBE, The Open Bank Project and the Shuttleworth Foundation</p>
             </div>
 
 
